# coral

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
src/: app.css  app.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: Avatar.svelte  Card.svelte  Input.svelte
src/routes/: +error.svelte  +layout.svelte  +page.svelte  chat.ts  types.ts
src/routes/chat/: +page.svelte
src/routes/chat/[charid]/: +page.svelte  +page.ts
src/routes/chat/[convoid]/: +page.svelte  +page.ts
src/routes/chat/characters/[charid]/: +page.svelte  +page.ts
src/routes/chat/conversations/: +page.svelte
src/routes/create/: +page.svelte
src/routes/settings/: +page.svelte  +page.ts
